@@ -1044,9 +1044,8 @@ cd /var/cache/pbuilder/result/
 	calls. It is more friendly to the hard drive.
       </para>
       <para>
-	<command>pbuilder</command> with cowdancer is under development, to allow
-	<command>pbuilder</command> to start up faster; when it is ready, it should 
-	be able to replace the current setup.
+	<command>pbuilder</command> with cowdancer is also an
+	alternative that improves speed of pbuilder startup.
       </para>
     </sect1>
     <sect1 id="chrootmemo">
@@ -1276,6 +1275,26 @@ cvs -z3 -d:pserver:anonymous@cvs.alioth.debian.org:/cvsroot/pbuilder co pbuilder
 	<command>pbuilder</command> for using
 	<command>cowdancer</command> is available from
 	<command>cowdancer</command> package since 0.14
+      </para>
+      <para>
+	Example command-lines for cowdancer look like the following.
+      </para>
+      <para>
+	<screen>
+# cowdancer --create --distribution sid
+# cowdancer --update --distribution sid
+# cowdancer --build XXX.dsc
+	</screen>
+      </para>
+      <para>
+	It is also possible to use cowdancer with pdebuild command.
+	Specify with command-line option <option>--pbuilder</option>
+	or set it in PDEBUILD_PBUILDER configuration option.
+      </para>
+      <para>
+	<screen>
+$ pdebuild --pbuilder cowdancer 
+	</screen>
       </para>
     </sect1>
     <sect1 id="withouttargz">
