@@ -1,8 +1,9 @@
 pbuilder (0.154) UNRELEASED; urgency=low
 
-  * 
+  [Junichi Uekawa]
+  * Document cowdancer and pdebuild.
 
- -- Junichi Uekawa <dancer@debian.org>  Fri, 26 May 2006 06:32:03 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sat, 27 May 2006 17:40:13 +0900
 
 pbuilder (0.153) unstable; urgency=low
 
