@@ -1,3 +1,8 @@
+2006-05-27  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: document cowdancer and pdebuild
+	cowdancer option.
+
 2006-05-24  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilder-buildpackage-funcs: quiet down cowprotect, it's giving
